# learning-rust

./: README.md  notes.txt
c_in_rust/: Cargo.toml  build.rs
c_in_rust/matlib/: CMakeLists.txt  math.c
c_in_rust/src/: main.rs
ex12_io/: Cargo.toml  poem.txt
ex12_io/src/: lib.rs  main.rs
ex_1/: Cargo.toml
ex_11_tests/: Cargo.toml
ex_11_tests/src/: lib.rs
ex_13/: Cargo.toml
ex_13/src/: main.rs
ex_14_crates/: Cargo.toml
ex_14_crates/src/: lib.rs  main.rs
ex_14_workspace/: Cargo.toml
ex_14_workspace/add-one/: Cargo.toml
ex_14_workspace/adder/: Cargo.toml
ex_15_reference_cycle/: Cargo.toml
ex_15_reference_cycle/src/: main.rs
ex_15_smart_pointers/: Cargo.toml
ex_15_smart_pointers/src/: lib.rs  main.rs
ex_16_concurrency/: Cargo.toml
ex_16_concurrency/src/: main.rs
ex_16_messages/: Cargo.toml
ex_16_messages/src/: main.rs
ex_16_mutex/: Cargo.toml
ex_17_oop/: Cargo.toml
ex_17_oop_design_pattern/: Cargo.toml
ex_17_oop_design_pattern_2/: Cargo.toml
ex_18_patterns_and_maching/: Cargo.toml
ex_18_patterns_and_matching_2/: Cargo.toml
ex_20_web_server/: 404.html  Cargo.toml  hello.html
ex_2_guessing_game/: Cargo.toml
ex_3_foundation/: Cargo.toml
ex_3_functions/: Cargo.toml
ex_4_ownershipment/: Cargo.toml
ex_5_structs/: Cargo.toml
ex_6_enums/: Cargo.toml
ex_7_modules/: Cargo.toml
ex_7_modules_2/: Cargo.toml
ex_8_excercises/: Cargo.toml
ex_8_maps/: Cargo.toml
ex_8_strings/: Cargo.toml
ex_8_vector/: Cargo.toml
ex_9_errors/: Cargo.toml
rust_in_c/rust_lib/: Cargo.toml
rust_in_c/rust_lib/src/: lib.rs
(+32 files in other folders)
