[package]
name = "ex_14_crates"
version = "0.1.0"
authors = ["Adam Ligocki <xligoc01@stud.feec.vutbr.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3


[dependencies]
