[package]
name = "rust_lib"
version = "0.1.0"
authors = ["Adam Ligocki <xligoc01@stud.feec.vutbr.cz>"]
edition = "2018"

[lib]
name = "rust_lib"
#crate-type = ["cdylib"]      # Creates dynamic lib
crate-type = ["staticlib"] # Creates static lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
